# chips-daq

./: .gitignore  .gitmodules  CMakeLists.txt  README  SETUP
bbb/: CMakeLists.txt
bbb/include/bbb/: badgerboard.h  badgerboard_control.h  badgerboard_datagrams.h  badgerboard_heartbeat.h  badgerboard_state.h  constants.h  dummy.h  packets.h
bbb/src/: badgerboard.cc  badgerboard_control.cc  badgerboard_heartbeat.cc  dummy.cc
clb/: CMakeLists.txt
clb/include/clb/: clb_event.h  clb_subsys.h  header_structs.h  msg_builder.h  msg_processor.h  msg_types.h  msg_writer.h  var_info.h  var_types.h
clb/src/: clb_event.cc  msg_builder.cc  msg_processor.cc  msg_reader.cc  msg_writer.cc  var_info.cc
daqonite/: CMakeLists.txt
daqonite/data/: fakeConf.opt
daqonite/include/: DAQ_bbb_api.h  DAQ_bbb_handler.h  DAQ_clb_data_structs.h  DAQ_clb_handler.h  DAQ_clb_header_structs.h  DAQ_data_handler.h  DAQ_handler.h  Monitoring_buffer.h  Monitoring_config.h  Monitoring_gui.h  basic_hit_receiver.h  batch_scheduler.h  bbb_api.h  bbb_handler.h  bbb_hit_receiver.h  bus_publisher.h  clb_data_structs.h  clb_event.h  clb_handler.h  clb_header_structs.h  clb_hit_receiver.h  clb_mon_handler.h  clb_opt_handler.h  command_receiver.h  control_msg.h  daq_config.h  daq_handler.h  daq_logging.h  daqonite.h  daqonite_common_header.h  daqonite_gui.h  daqonite_publisher.h  data_handler.h  data_run.h  data_run_file.h  data_run_serialiser.h  elastic_interface.h  frame_generator.h  hit_receiver.h  merge_sorter.h  (+14 more)
daqonite/lib/XmlRpc/: Makefile
daqonite/src/: BBBTest.cc  DAQ_bbb_handler.cc  DAQ_clb_handler.cc  DAQ_data_handler.cc  DAQ_handler.cc  DAQommand.cc  DAQonite.cc  Makefile  Monitoring_buffer.cc  Monitoring_config.cc  Monitoring_gui.cc  Monitoring_gui_linkdef.h  basic_hit_receiver.cc  batch_scheduler.cc  bbb_handler.cc  bbb_hit_receiver.cc  bbb_test.cc  bbb_testServer.cc  bus_publisher.cc  chips_fsm.cc  clb_handler.cc  clb_hit_receiver.cc  clb_mon_handler.cc  clb_opt_handler.cc  clbsim.cc  command_receiver.cc  daq_command.cc  daq_config.cc  daq_handler.cc  daqommand.cc  daqonite.cc  daqonite_gui.cc  daqonite_gui_linkdef.h  daqonite_publisher.cc  daqsitter.cc  daquardian.cc  daqulator.cc  data_handler.cc  data_run.cc  data_run_file.cc  (+19 more)
daqontrol/: CMakeLists.txt
daqontrol/include/: bbb_controller.h  clb_controller.h  clb_event.h  clb_events.h  clb_subsys.h  controller.h  daq_control.h  daqontrol_publisher.h  mcf_message.h  mcf_packet.h  msg_builder.h  msg_processor.h  msg_reader.h  proc_var.h  var_info.h
daqontrol/src/: bbb_controller.cc  clb_controller.cc  clb_event.cc  controller.cc  daq_control.cc  daqontrol.cc  daqontrol_publisher.cc  mcf_message.cc  mcf_packet.cc  msg_builder.cc  msg_processor.cc  msg_reader.cc  msg_writer.cc  var_info.cc
daqsitter/: CMakeLists.txt
daqsitter/include/: daqsitter_publisher.h  monitoring_handler.h  monitoring_server.h
daqsitter/src/: daqsitter.cc  daqsitter_publisher.cc  monitoring_handler.cc  monitoring_server.cc
daqulator/: CMakeLists.txt
daqulator/include/: packet_generator.h
daqulator/src/: daqulator.cc  packet_generator.cc
fsm/: CMakeLists.txt
fsm/include/: fsm.h  global.h  global_events.h  ops_uplink.h  reporter.h
fsm/include/control_bus/: bus_master.h  events.h  fsm.h  states.h
fsm/include/daqonite/: events.h  fsm.h  observer.h  states.h
fsm/include/daqontrol/: events.h  fsm.h  observer.h  states.h
fsm/include/daqsitter/: events.h  fsm.h  observer.h  states.h
fsm/include/experiment/: fsm.h  states.h
fsm/src/: fsm.cc  global.cc  ops_uplink.cc  reporter.cc
fsm/src/control_bus/: bus_master.cc  fsm.cc  states.cc
fsm/src/daqonite/: fsm.cc  observer.cc  states.cc
fsm/src/daqontrol/: fsm.cc  observer.cc  states.cc
fsm/src/daqsitter/: fsm.cc  observer.cc  states.cc
fsm/src/experiment/: fsm.cc  states.cc
lib/: CMakeLists.txt
lib/XmlRpc/: CMakeLists.txt
lib/XmlRpc/src/: XmlRpcServerConnection.cpp  XmlRpcSocket.cpp
lib/fh_message/: CMakeLists.txt
lib/fh_message/include/: fh_ascii_service.h  fh_data_access_service.h  fh_dispatch.h  fh_error.h  fh_exp_ctrl_service.h  fh_frame_protocol.h  fh_library.h  fh_message.h  fh_message_util.h  fh_msg_service.h  fh_msg_translator.h  fh_multi.h  fh_pack.h  fh_protocol.h  fh_service.h  fh_stream.h  fh_test_functions.h  fh_transport.h  fh_util.h
lib/fh_message/src/: Makefile  fh_classes.h  fh_data_access_service.c  fh_dispatch.c  fh_error.c  fh_frame_protocol.c  fh_frame_protocol_legacy.c  fh_frame_protocol_legacy.h  fh_frame_protocol_v1.c  fh_frame_protocol_v2.h  fh_message.c  fh_message_util.c  fh_msg_service.c  fh_msg_translator.c  fh_multi.c  fh_pack.c  fh_protocol.c  fh_service.c  fh_slow_ctrl_service.c  fh_socket_util.c  fh_socket_util.h  fh_sorter.c  fh_stream.c  fh_transport.c  fh_util.c
relay/: CMakeLists.txt
relay/include/relay/: danout_relay.h  ec_relay.h  mc_relay.h  relay.h
relay/src/: 8020Controller.cc  IA3kController.cc  danout_relay.cc  ec_relay.cc  mc_relay.cc  power.cc
spill_scheduling/: CMakeLists.txt
spill_scheduling/include/spill_scheduling/: basic_spill_scheduler.h  infinite_spill_scheduler.h  nova_spill_signal_type.h  periodic_spill_scheduler.h  spill.h  spill_data_slot.h  tdu_signal.h  tdu_signal_type.h  tdu_spill_scheduler.h  xml_rpc_spill_method.h
spill_scheduling/src/: basic_spill_scheduler.cc  infinite_spill_scheduler.cc  nova_spill_signal_type.cc  periodic_spill_scheduler.cc  tdu_signal_type.cc  tdu_spill_scheduler.cc  xml_rpc_spill_method.cc
util/: CMakeLists.txt
util/include/util/: annotation.h  annotation_queues.h  async_component.h  async_component_group.h  async_runnable.h  bus_publisher.h  chips_config.h  command_receiver.h  config.h  control_msg.h  daq_config.h  elastic_interface.h  logging.h  pmt_hit.h  pmt_hit_queues.h  publisher.h  (+3 more)
util/src/: async_component.cc  async_component_group.cc  backtrace.cc  backtrace.h  backtrace_on_terminate.h  bus_publisher.cc  chips_config.cc  command_receiver.cc  config.cc  control_msg.cc  daq_config.cc  demangle.cc  demangle.h  elastic_interface.cc  logging.cc  signal_receiver.cc  timestamp.cc
(+222 files in other folders)
